Finessed table formatting, cleaned up notebook.

--- a/paulssonlab/src/paulssonlab/shenker/lab-helper/180518 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/lab-helper/180518 Prototyping.ipynb
@@ -205,25 +205,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tally_upcoming(events, user_weights).sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dates = pd.date_range(start=\"1/1/2011\", end=datetime.datetime.now(), freq=\"MS\")\n",
-    "dates2 = pd.date_range(start=\"1/1/2017\", end=datetime.datetime.now(), freq=\"MS\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def busy_days(events, dates):\n",
     "    all_days = reduce(\n",
     "        lambda x, y: x | y,\n",
@@ -254,6 +235,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Styling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.cm as cm\n",
+    "from matplotlib.colors import to_hex\n",
+    "\n",
+    "cmap = cm.get_cmap(\"YlOrBr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _lookup_range(range_to_color, value):\n",
+    "    for (start, stop), position in range_to_color.items():\n",
+    "        if start <= value < stop:\n",
+    "            return position\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "def highlight_ranges(range_to_color, cmap, data):\n",
+    "    \"\"\"\n",
+    "    highlight the maximum in a Series or DataFrame\n",
+    "    \"\"\"\n",
+    "    # color = to_hex(cmap(0.5))\n",
+    "    attr = \"background-color: {}\"\n",
+    "    if data.ndim == 1:  # Series from .apply(axis=0) or axis=1\n",
+    "        # is_max = data == data.max()\n",
+    "        # return [attr if v else '' for v in is_max]\n",
+    "        styles = []\n",
+    "        for d in data:\n",
+    "            position = _lookup_range(range_to_color, d)\n",
+    "            if position:\n",
+    "                styles.append(attr.format(to_hex(cmap(position))))\n",
+    "            else:\n",
+    "                styles.append(\"\")\n",
+    "        return styles\n",
+    "    # else:  # from .apply(axis=None)\n",
+    "    # is_max = data == data.max().max()\n",
+    "    # return pd.DataFrame(np.where(is_max, attr, ''),\n",
+    "    #                    index=data.index, columns=data.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = pd.date_range(start=\"1/1/2011\", end=datetime.datetime.now(), freq=\"MS\")\n",
+    "dates2 = pd.date_range(start=\"1/1/2017\", end=datetime.datetime.now(), freq=\"MS\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -276,24 +329,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "durs = tally_duration(events, user_weights, dates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dur_days = to_dayfrac(durs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "durs = tally_duration(events, user_weights, dates)\n",
+    "dur_days = to_dayfrac(durs)\n",
     "obj = {\n",
     "    name: hv.Curve(d.reset_index().values)\n",
     "    .redim(x=\"date\", y=\"days\")\n",
@@ -309,12 +346,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recent_durs = to_dayfrac(tally_duration(events, user_weights, dates2))\n",
+    "recent_durs = to_dayfrac(\n",
+    "    tally_duration(events[events[\"all_day\"]], user_weights, dates2)\n",
+    ")\n",
     "total_durs = recent_durs.sum(axis=0).sort_values(ascending=False)\n",
     "recent_durs = recent_durs.reindex(columns=total_durs.index).loc[:, total_durs > 0]\n",
-    "recent_durs.style.set_precision(2).highlight_max(\n",
-    "    axis=1\n",
-    ")  # .background_gradient(cmap='viridis', low=0.7, high=0)"
+    "# recent_durs.style.set_precision(2).highlight_max(axis=1)#.background_gradient(cmap='viridis', low=0.7, high=0)\n",
+    "recent_durs.style.set_precision(2).apply(\n",
+    "    partial(\n",
+    "        highlight_ranges,\n",
+    "        {(3, 6): 0.1, (6, 10): 0.2, (10, 15): 0.3, (15, 20): 0.5, (20, 32): 0.6},\n",
+    "        cmap,\n",
+    "    ),\n",
+    "    axis=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_dayfrac(\n",
+    "    tally_upcoming(events[events[\"all_day\"]], user_weights).to_frame()\n",
+    ").sort_values(0, ascending=False).T.style.set_precision(2).apply(\n",
+    "    partial(\n",
+    "        highlight_ranges,\n",
+    "        {(3, 6): 0.1, (6, 10): 0.2, (10, 15): 0.3, (15, 20): 0.5, (20, 32): 0.6},\n",
+    "        cmap,\n",
+    "    ),\n",
+    "    axis=1,\n",
+    ").hide_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{microscope: hv.Curve(busy_days(events[events[microscope]], dates).reset_index().rename(columns={0: 'days', 'index': 'date'}))"
    ]
   }
  ],
