--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180605 Hough transform.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180605 Hough transform.ipynb
@@ -10,7 +10,8 @@
     "import skimage\n",
     "import skimage.filters\n",
     "import nd2reader\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numba"
    ]
   },
   {
@@ -353,6 +354,103 @@
    "outputs": [],
    "source": [
     "plt.scatter(h.flat, h3.flat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FROM: https://alyssaq.github.io/2014/understanding-hough-transform/\n",
+    "def hough_line_intensity2(img, theta=None):\n",
+    "    # Rho and Theta ranges\n",
+    "    if theta is None:\n",
+    "        theta = np.linspace(-np.pi / 2, np.pi / 2, 180)\n",
+    "    width, height = img.shape\n",
+    "    diagonal = int(np.ceil(np.sqrt(width**2 + height**2)))\n",
+    "    rhos = np.linspace(-diagonal, diagonal, diagonal * 2)\n",
+    "    # Hough accumulator array of theta vs rho\n",
+    "    accumulator = np.zeros(\n",
+    "        (2 * diagonal, len(theta)), dtype=_accumulator_dtype(img.dtype)\n",
+    "    )  # TODO: dtype\n",
+    "    _hough_line_intensity2(accumulator, img, theta, diagonal)\n",
+    "    return accumulator, theta, rhos\n",
+    "\n",
+    "\n",
+    "@numba.njit\n",
+    "def _hough_line_intensity2(accumulator, img, theta, diagonal):\n",
+    "    # Cache some resuable values\n",
+    "    cos_t = np.cos(theta)\n",
+    "    sin_t = np.sin(theta)\n",
+    "    num_thetas = len(theta)\n",
+    "    for i in range(img.shape[0]):\n",
+    "        for j in range(img.shape[1]):\n",
+    "            if img[i, j] == 0:  # optimization for boolean input images\n",
+    "                continue\n",
+    "            # rho = np.round_(i * sin_t + j * cos_t).astype(np.intp) + diagonal\n",
+    "            # rho = np.arange(num_thetas)\n",
+    "            # accumulator[rho, np.arange(num_thetas)] += img[i,j]\n",
+    "            for k in range(num_thetas):\n",
+    "                rho = int(np.round_(i * sin_t[k] + j * cos_t[k])) + diagonal\n",
+    "                accumulator[rho, k] += img[i, j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "h4, theta4, d4 = hough_line_intensity2(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_hough_line_intensity2.inspect_types()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.imshow(h4[3000:3200, 80:100], aspect=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5, _, _ = image.hough_line_intensity(img, theta=np.deg2rad(np.linspace(-10, 10, 100)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15, 15))\n",
+    "plt.imshow(h5[2500:5000, :], aspect=0.05)"
    ]
   },
   {
