--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180601 Data handling.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180601 Data handling.ipynb
@@ -40,8 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%load_ext autoreload\n",
-    "#%autoreload 2"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster = LocalCluster(n_workers=0, ncores=1)  # TODO: ncores ignored\n",
+    "cluster = LocalCluster(n_workers=0, ncores=1, processes=False)  # TODO: ncores ignored\n",
     "cluster.start_worker(ncores=1)\n",
     "client = Client(cluster)"
    ]
@@ -130,37 +130,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster.start_workers(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster.stop_workers([4])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "getitem_r = lambda b, a: getitem(a, b)"
    ]
   },
   {
@@ -211,7 +184,7 @@
    "source": [
     "a = client.submit(\n",
     "    compose(\n",
-    "        trench_detection.get_trenches, lambda x: x.get_frame_2D(v=0, c=2, memmap=False)\n",
+    "        trench_detection.get_trenches, lambda x: x.get_frame_2D(v=2, c=2, memmap=False)\n",
     "    ),\n",
     "    nd2,\n",
     ")"
@@ -230,6 +203,57 @@
     "    ),\n",
     "    nd2,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = util.future_getitem(client.submit, a, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_reload():\n",
+    "    from importlib import reload\n",
+    "\n",
+    "    reload(trench_detection)\n",
+    "\n",
+    "\n",
+    "client.run(do_reload)"
    ]
   },
   {
@@ -260,7 +284,7 @@
     "    filename: {\n",
     "        v: client.submit(\n",
     "            compose(\n",
-    "                wrap_diagnostics(get_trenches),\n",
+    "                util.wrap_diagnostics(trench_detection.get_trenches),\n",
     "                lambda x: x.get_frame_2D(v=v, c=2, memmap=False),\n",
     "            ),\n",
     "            nd2,\n",
@@ -277,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = trench_data[nd2_filenames[0]][0].traceback()"
+    "trench_data"
    ]
   },
   {
@@ -288,15 +312,6 @@
    "source": [
     "from traceback import print_tb, print_exception\n",
     "import traceback"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.gather(trench_data)"
    ]
   },
   {
