Handle empty/failed futures correctly.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180610 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180610 Trench detection.ipynb
@@ -74,6 +74,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store -r trench_df2 trench_df3"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,6 +119,15 @@
    "source": [
     "cluster._widget().children[1].children[1].children[0].children[0].layout.width = \"200px\"\n",
     "cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = Client()"
    ]
   },
   {
@@ -389,49 +407,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.cancel(trench_rows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_rows_combined2 = util.apply_map_futures(\n",
+    "trench_rows_combined = util.apply_map_futures(\n",
     "    client.gather, trench_rows, predicate=lambda x: x.status == \"finished\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%store trench_rows_combined"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_rows_combined = util.recursive_map(\n",
-    "    lambda x: x,\n",
-    "    trench_rows_combined2,\n",
-    "    predicate=lambda x: not hasattr(x, \"__len__\") or len(x) > 0,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_rows_combined.keys()"
    ]
   },
   {
@@ -466,33 +444,6 @@
    "outputs": [],
    "source": [
     "trench_df2 = util.multi_join(trench_df, nd2_positions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df2[bad_periods]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df3 = trench_df2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%store trench_df3"
    ]
   },
   {
@@ -559,68 +510,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head().reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idxs = df[bad_periods].index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(idxs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_futures = [\n",
-    "    client.submit(\n",
-    "        lambda x: x.get_frame_2D(\n",
-    "            v=idx[1], t=idx[2], c=nd2_metadata[idx[0]][\"channels\"].index(\"MCHERRY\")\n",
-    "        ),\n",
-    "        nd2s[idx[0]],\n",
-    "    )\n",
-    "    for idx in idxs\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "progress(frame_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames = client.gather(frame_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "frames = [\n",
     "    nd2reader.ND2Reader(idx[0]).get_frame_2D(\n",
     "        v=idx[1], t=idx[2], c=nd2_metadata[idx[0]][\"channels\"].index(\"MCHERRY\")\n",
@@ -636,6 +525,35 @@
    "outputs": [],
    "source": [
     "hv.HoloMap({str(idx): ui.RevImage(frame) for idx, frame in zip(idxs, frames)})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compare setwise Hough vs. framewise Hough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_both = trench_df2.join(trench_df3, how=\"inner\", lsuffix=\"\", rsuffix=\"_sw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_both.reset_index().holoplot(\n",
+    "    x=\"trench_rotation.hough_1.angle\",\n",
+    "    y=\"trench_rotation.hough_1.angle_sw\",\n",
+    "    kind=\"scatter\",\n",
+    ")"
    ]
   },
   {
@@ -764,18 +682,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   }
  },
  "nbformat": 4,
