--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180613 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180613 Trench detection.ipynb
@@ -74,6 +74,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store -r trench_df2 trench_df3"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,6 +119,15 @@
    "source": [
     "cluster._widget().children[1].children[1].children[0].children[0].layout.width = \"200px\"\n",
     "cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = Client()"
    ]
   },
   {
@@ -166,9 +184,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# nd2s = {filename: client.submit(nd2reader.ND2Reader, filename, memmap=False) for filename in nd2_filenames}\n",
     "nd2s = {\n",
-    "    filename: client.submit(nd2reader.ND2Reader, filename, memmap=False)\n",
-    "    for filename in nd2_filenames\n",
+    "    filename: nd2reader.ND2Reader(filename, memmap=False) for filename in nd2_filenames\n",
     "}"
    ]
   },
@@ -178,17 +196,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2_sizes = util.apply_map_futures(\n",
-    "    client.gather, util.map_futures(partial(client.submit, lambda nd2: nd2.sizes), nd2s)\n",
-    ")\n",
-    "nd2_parsed_metadata = util.apply_map_futures(\n",
-    "    client.gather,\n",
-    "    util.map_futures(partial(client.submit, lambda nd2: nd2.metadata), nd2s),\n",
-    ")\n",
-    "nd2_metadata = util.apply_map_futures(\n",
-    "    client.gather,\n",
-    "    util.map_futures(partial(client.submit, metadata.parse_nd2_metadata), nd2s),\n",
-    ")"
+    "# nd2_sizes = util.apply_map_futures(client.gather, util.map_futures(partial(client.submit, lambda nd2: nd2.sizes), nd2s))\n",
+    "# nd2_parsed_metadata = util.apply_map_futures(client.gather, util.map_futures(partial(client.submit, lambda nd2: nd2.metadata), nd2s))\n",
+    "# nd2_metadata = util.apply_map_futures(client.gather, util.map_futures(partial(client.submit, metadata.parse_nd2_metadata), nd2s))\n",
+    "nd2_sizes = util.map_futures(lambda nd2: nd2.sizes, nd2s)\n",
+    "nd2_parsed_metadata = util.map_futures(lambda nd2: nd2.metadata, nd2s)\n",
+    "nd2_metadata = util.map_futures(metadata.parse_nd2_metadata, nd2s)"
    ]
   },
   {
@@ -389,49 +402,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.cancel(trench_rows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_rows_combined2 = util.apply_map_futures(\n",
+    "trench_rows_combined = util.apply_map_futures(\n",
     "    client.gather, trench_rows, predicate=lambda x: x.status == \"finished\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%store trench_rows_combined"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_rows_combined = util.recursive_map(\n",
-    "    lambda x: x,\n",
-    "    trench_rows_combined2,\n",
-    "    predicate=lambda x: not hasattr(x, \"__len__\") or len(x) > 0,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_rows_combined.keys()"
    ]
   },
   {
@@ -466,33 +439,6 @@
    "outputs": [],
    "source": [
     "trench_df2 = util.multi_join(trench_df, nd2_positions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df2[bad_periods]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df3 = trench_df2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%store trench_df3"
    ]
   },
   {
@@ -559,68 +505,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head().reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idxs = df[bad_periods].index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(idxs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_futures = [\n",
-    "    client.submit(\n",
-    "        lambda x: x.get_frame_2D(\n",
-    "            v=idx[1], t=idx[2], c=nd2_metadata[idx[0]][\"channels\"].index(\"MCHERRY\")\n",
-    "        ),\n",
-    "        nd2s[idx[0]],\n",
-    "    )\n",
-    "    for idx in idxs\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "progress(frame_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames = client.gather(frame_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "frames = [\n",
     "    nd2reader.ND2Reader(idx[0]).get_frame_2D(\n",
     "        v=idx[1], t=idx[2], c=nd2_metadata[idx[0]][\"channels\"].index(\"MCHERRY\")\n",
@@ -636,6 +520,102 @@
    "outputs": [],
    "source": [
     "hv.HoloMap({str(idx): ui.RevImage(frame) for idx, frame in zip(idxs, frames)})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compare setwise Hough vs. framewise Hough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_both = trench_df2.join(trench_df3, how=\"inner\", lsuffix=\"\", rsuffix=\"_sw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_angle = trench_both[\"trench_rotation.hough_1.angle_sw\"].abs() > 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_period = ~(\n",
+    "    (trench_both[\"trench_anchors.periodogram_1.period_sw\"] < 25)\n",
+    "    & (trench_both[\"trench_anchors.periodogram_1.period_sw\"] > 23)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_angle.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(trench_both[bad_angle].reset_index()[[\"filename\", \"position\"]].drop_duplicates())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = trench_both[bad_angle].reset_index()[['filename','position']].drop_duplicates()\n",
+    "{ui.RevImage(nd2s[])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sum(bad_angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sum(np.logical_or(bad_period, bad_angle))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_both.reset_index().holoplot(\n",
+    "    x=\"trench_rotation.hough_1.angle\",\n",
+    "    y=\"trench_rotation.hough_1.angle_sw\",\n",
+    "    kind=\"scatter\",\n",
+    ")"
    ]
   },
   {
