Old miscellaneous stuff I forgot to commit along the way. Whoopsie-doopsie.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180605 Hough transform.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180605 Hough transform.ipynb
@@ -20,6 +20,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import trench_detection, ui"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "nd2 = nd2reader.ND2Reader(\"/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2\")"
    ]
   },
@@ -440,7 +458,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "h0, _, _ = skimage.transform.hough_line(\n",
+    "    bin_img, theta=np.deg2rad(np.linspace(-10, 10, 100))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "h5, _, _ = image.hough_line_intensity(img, theta=np.deg2rad(np.linspace(-10, 10, 100)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15, 15))\n",
+    "plt.imshow(h0[2500:5000, :], aspect=0.05)"
    ]
   },
   {
