In-place migrated from string to integer position index.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180619 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180619 Trench detection.ipynb
@@ -248,61 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reload(workflow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "nd2_positions = workflow.get_position_metadata(nd2_metadata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2_positions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = nd2_positions[\"x\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(x == x[2])[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2_positions[\"x\"].map(lambda c: np.where(c)[0][0])"
    ]
   },
   {
@@ -394,45 +340,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.cancel(trench_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "progress(trench_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "trench_rows = util.apply_map_futures(\n",
     "    partial(client.map, diagnostics.wrapped_diagnostics_to_dataframe), trench_data\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.cancel(trench_rows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "progress(trench_rows)"
    ]
   },
   {
@@ -481,17 +391,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Frame browser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_df2[~bad_periods].reset_index().holoplot(\n",
-    "    y=\"trench_anchors.periodogram_1.period\",\n",
-    "    x=\"x\",\n",
-    "    by=[\"filename\", \"channel\"],\n",
-    "    kind=\"scatter\",\n",
-    ")"
+    "nd2_pos2 = nd2_positions[[\"position_name\"]].reset_index()\n",
+    "nd2_pos2.columns = [\"filename\", \"position_num\", \"position\"]\n",
+    "nd2_pos2 = nd2_pos2.set_index([\"filename\", \"position\"])"
    ]
   },
   {
@@ -500,12 +421,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_df2[bad_periods].reset_index().holoplot(\n",
-    "    y=\"trench_anchors.periodogram_1.period\",\n",
-    "    x=\"x\",\n",
-    "    by=[\"filename\", \"channel\"],\n",
-    "    kind=\"scatter\",\n",
-    ")"
+    "df_temp = util.multi_join(trench_df3, nd2_pos2).reset_index()\n",
+    "df_temp.rename(\n",
+    "    columns={\"position\": \"position_name\", \"position_num\": \"position\"}, inplace=True\n",
+    ")\n",
+    "df_temp.set_index([\"filename\", \"position\", \"channel\", \"t\", \"trench_set\"], inplace=True)\n",
+    "trench_df3 = df_temp"
    ]
   },
   {
@@ -514,28 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_df2[~bad_periods].reset_index().holoplot(\n",
-    "    y=\"trench_anchors.periodogram_1.period\",\n",
-    "    x=\"t\",\n",
-    "    by=[\"filename\", \"channel\", \"position\"],\n",
-    "    kind=\"scatter\",\n",
-    "    legend=False,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df2[~bad_periods].reset_index().holoplot(\n",
-    "    y=\"trench_rotation.hough_2.angle\",\n",
-    "    x=\"t\",\n",
-    "    by=[\"filename\", \"position\"],\n",
-    "    kind=\"scatter\",\n",
-    "    legend=False,\n",
-    ")"
+    "%store trench_df3"
    ]
   },
   {
