Forgot to commit.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/180517 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/180517 Prototyping.ipynb
@@ -256,6 +256,8 @@
     "            feeding_channel_width=fc,\n",
     "            trench_spacing=ts,\n",
     "            lane_gap=lg,\n",
+    "            tick_labels=False,\n",
+    "            text=False,\n",
     "            draw_trenches=True,\n",
     "            metadata=metadata,\n",
     "        )\n",
@@ -263,8 +265,9 @@
     "        for ts in (1, 1.5, 2)\n",
     "    ],\n",
     "    \"Big Snakes \\n BS/JQS 180513\",\n",
+    "    text=False,\n",
     ")\n",
-    "write_gds(main_cell, \"bigsnakes4.gds\")"
+    "write_gds(main_cell, \"bigsnakes4_notext.gds\")"
    ]
   },
   {
@@ -273,7 +276,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!du -hs bigsnakes4.gds"
+    "%%time\n",
+    "from snakenmake import *\n",
+    "\n",
+    "metadata = {}\n",
+    "main_cell = wafer(\n",
+    "    [\n",
+    "        chip(\n",
+    "            \"Big Snake S3 FC{fc} L35 W1.5 TS{ts} LG{lg}\".format(fc=fc, ts=ts, lg=lg),\n",
+    "            snake,\n",
+    "            split=3,\n",
+    "            feeding_channel_width=fc,\n",
+    "            trench_spacing=ts,\n",
+    "            lane_gap=lg,\n",
+    "            tick_labels=False,\n",
+    "            text=True,\n",
+    "            draw_trenches=True,\n",
+    "            metadata=metadata,\n",
+    "        )\n",
+    "        for (fc, lg) in zip((90, 45), (20, 17))\n",
+    "        for ts in (1, 1.5, 2)\n",
+    "    ],\n",
+    "    \"Big Snakes \\n BS/JQS 180513\",\n",
+    "    text=True,\n",
+    ")\n",
+    "write_gds(main_cell, \"bigsnakes4_noticklabels.gds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!du -hs bigsnakes4_noticklabels.gds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!du -hs bigsnakes4_notext.gds"
    ]
   },
   {
